Small UX Fixes, Cordova Image doesnt seem to work properly after takin an image (Distorted web view)

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -10,7 +10,8 @@
 body
   width: 100%
   height: 100%
-  position: fixed
+  position: relative
+  overflow: auto
   margin: 0
   padding: 0
   font-family: 'Helvetica Neue', Helvetica, Arial, Verdana, sans-serif
